typescript/checker/tests/conformance/parser/ecmascript5/Generics/parserGreaterThanTokenAmbiguity18.ts.stderr
error: Unexpected token Some(AssignOp("="))
 --> $DIR/tests/conformance/parser/ecmascript5/Generics/parserGreaterThanTokenAmbiguity18.ts:1:10
  |
1 | 1 >>>/**/= 2;
  |          ^

